# seeyue-workflows

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Force-Delete.ps1  GEMINI.md  NOTICE  README.md  convert_mcp_docs.py  log.txt  main.py  package.json  sync-manifest.json
.claude/: settings.json  sy-hooks.policy.json
.codex/: config.toml  skill-metadata.json
.gemini/: settings.json
.serena/: project.yml
docs/: Agent-File-Editing-Engine.md  MCP-seeyue-workflows-融合方案.md  P2-plans.md  README.md  _utf8_probe.txt  adoption-guide.md  architecture-v4.md  architecture-v5-proposal.md  architecture.md  engine-interaction-mapping.md  hooks-architecture-design.md  hooks-completeness-20260310.md  hooks-guide.md  hooks-improvement-checklist - 副本.md  hooks-improvement-checklist.md.md  hooks-interaction-bridge.md  hooks-mcp-interaction-refactor-plan.md  hooks-reference-analysis.md  implementation-plan-v5.md  interaction-acceptance-criteria.md  interaction-implementation-task-list.md  interaction-runtime-integration.md  interaction-tui-architecture.md  machine-alignment-checklist.md  (+33 more)
seeyue-mcp/: .gitignore  Cargo.toml  test_e2e.py  test_e2e_p1.py  test_integration_p1.py  test_mcp.py  test_perf_p1.py
seeyue-mcp/.zcf/plan/history/: 2026-03-17_215821-memory-inspired-tools.md
seeyue-mcp/benches/: encoding.rs  find_symbol.rs  policy.rs  policy.rs.sy-bak
seeyue-mcp/src/: app_state.rs  backup.rs  checkpoint.rs  diff.rs  encoding.rs  error.rs  lib.rs  main.rs  params.rs
seeyue-mcp/src/encoding/: detect.rs  mod.rs  rw.rs  unicode.rs
seeyue-mcp/src/git/: mod.rs
seeyue-mcp/src/hooks/: mod.rs  posttool_bash.rs  prompt_refresh.rs  protocol.rs  router.rs  session_start.rs  verify_staging.rs
seeyue-mcp/src/interaction/: cli.rs  io.rs  mod.rs  render_tui.rs  renderer.rs  schema.rs  state.rs  terminal.rs  theme.rs
seeyue-mcp/src/lsp/: mod.rs  protocol.rs
seeyue-mcp/src/params/: editing.rs  execution.rs  extended.rs  git.rs  interactive.rs  memory.rs  mod.rs  navigation.rs  platform.rs
seeyue-mcp/src/platform/: mod.rs  notify.rs  path.rs  terminal.rs
seeyue-mcp/src/policy/: command.rs  evaluator.rs  file_class.rs  mod.rs  spec_loader.rs  types.rs
seeyue-mcp/src/prompts/: mod.rs  registry.rs  substitution.rs
seeyue-mcp/src/render/: mod.rs
seeyue-mcp/src/resources/: mod.rs  workflow.rs
seeyue-mcp/src/server/: mod.rs  schema.rs  tools_core.rs  tools_ext.rs  tools_git.rs  tools_ia.rs  tools_mem.rs  tools_nav.rs  util.rs
seeyue-mcp/src/storage/: cache.rs  checkpoint.rs  mod.rs
seeyue-mcp/src/tools/: active_filter.rs  approval.rs  ask_user.rs  batch_read.rs  call_hierarchy.rs  checkpoint_list.rs  compact_journal.rs  compat.rs  create_file_tree.rs  dependency_graph.rs  diff_since_checkpoint.rs  dispatch.rs  edit.rs  env_info.rs  file_outline.rs  file_rename.rs  find_definition.rs  find_files.rs  find_references.rs  find_referencing_symbols.rs  find_symbol.rs  format_file.rs  get_hover_info.rs  get_symbols_overview.rs  git_blame.rs  git_diff_file.rs  git_log.rs  git_status.rs  hooks.rs  input_request.rs  insert_symbol.rs  interaction_mcp.rs  interaction_strategy.rs  lint_file.rs  memory_delete.rs  memory_list.rs  memory_read.rs  memory_write.rs  metadata.rs  mod.rs  (+30 more)
seeyue-mcp/src/treesitter/: helpers.rs  languages.rs  mod.rs  symbols.rs
seeyue-mcp/src/workflow/: journal.rs  mod.rs  state.rs
seeyue-mcp/tests/: active_filter.rs  bench_policy.rs  compat_schema.rs  dispatch_routing.rs  interaction_cli.rs  interaction_mcp.rs  interaction_mcp_client.rs  interaction_migration.rs  interaction_model.rs  interaction_terminal_probe.rs  interaction_text_render.rs  interaction_tui.rs  lsp_discover.rs  lsp_document_symbols.rs  metadata_registry.rs  parity_test.ps1  project_index.rs  schema_tools_list.rs  session_index_update.rs  symbol_find.rs  symbol_find_index.rs  symbol_insert.rs  symbol_overview.rs  symbol_references.rs  symbol_replace.rs  test_batch_read.rs  test_call_hierarchy.rs  test_checkpoint.rs  test_checkpoint_list.rs  test_compact_journal.rs  test_create_file_tree.rs  test_dependency_graph.rs  test_diff.rs  test_diff_since_checkpoint.rs  test_edit.rs  test_encoding.rs  test_env_info.rs  test_file_outline.rs  test_file_rename.rs  test_find_definition.rs  (+34 more)
(+308 files in other folders)
